added pictures and links

--- a/Nature pictures.html
+++ b/Nature pictures.html
@@ -6,5 +6,58 @@
 </head>
 <body>
 
+<div id="content">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio/index.html">Portfolio</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <section class="first">
+        <h1>Nature/other</h1>
+
+
+        <li><a href="assets/images/ang%20balsta.jpg"> <img src="assets/images/ang%20balsta.jpg" width="300"></a></li>
+        Location: Bålsta, Stockholm, Sweden</p>
+        <li><a href="assets/images/graff%201%20brighton.jpg"> <img src="assets/images/graff%201%20brighton.jpg" width="300"></a></li>
+        <p>Location: Brighton, England</p>
+        <li><a href="assets/images/grand%20gubbe%20sepia.jpg"> <img src="assets/images/grand%20gubbe%20sepia.jpg" width="300"></a></li>
+        <p>Location: Djerba, Tunisia</p>
+        <li><a href="assets/images/oboy.jpg"> <img src="assets/images/oboy.jpg" width="300"></a></li>
+        <p>Location: Tyresö, Stockholm, Sweden</p>
+        <li><a href="assets/images/vit%20blomma%20closeup.jpg"> <img src="assets/images/vit%20blomma%20closeup.jpg" width="300"></a></li>
+        <p>Location: Tyresö, Stockholm, Sweden</p>
+        <li><a href="assets/images/vit%20blomma%20sepia.jpg"> <img src="assets/images/vit%20blomma%20sepia.jpg" width="300"></a></li>
+        <p>Location: Eskilstuna, Sweden</p>
+
+        <section class="second">
+        <li><a href="assets/images/soluppgang%20tunisien%20gul.jpg"> <img src="assets/images/soluppgang%20tunisien%20gul.jpg" width="300"></a></li>
+        <p>Location: Djerba, Tunisia</p>
+        <li><a href="assets/images/djerba%20strand%20tunisien%20parasoll.jpg"> <img src="assets/images/djerba%20strand%20tunisien%20parasoll.jpg" width="300"></a></li>
+        <p>Location: Djerba, Tunisia</p>
+        <li><a href="assets/images/time.jpg"> <img src="assets/images/time.jpg" width="300"></a></li>
+        <p>Location: Tyresö, Stockholm, Sweden</p>
+        <li><a href="assets/images/tunisien%20rod%20blomma.jpg"> <img src="assets/images/tunisien%20rod%20blomma.jpg" width="300"></a></li>
+        <p>Location: Djerba, Tunisia</p>
+        <li><a href="assets/images/vatten%20bokeh.jpg"> <img src="assets/images/vatten%20bokeh.jpg" width="300"></a></li>
+        <p>Location: Tyresö, Stockholm, Sweden</p>
+        <li><a href="assets/images/lisa%20sepia.jpg"> <img src="assets/images/lisa%20sepia.jpg" width="300"></a></li>
+
+        </section>
+
+        <section class="third">
+        <p>Location: Tyresö, Stockholm, Sweden</p>
+        <li><a href="assets/images/gul%20ang%20var.jpg"> <img src="assets/images/gul%20ang%20var.jpg" width="300"></a></li>
+        <p>Location: Tyresö, Stockholm, Sweden</p>
+        <li><a href="assets/images/arlanda%20vantrum.jpg"> <img src="assets/images/arlanda%20vantrum.jpg" width="300"></a></li>
+        <p>Location: Arlanda, Sweden</p>
+        <li><a href="assets/images/dorr%20mork%20profil%20tunisien.jpg"><img src="assets/images/dorr%20mork%20profil%20tunisien.jpg" width="300"></a></li>
+        <p>Location: Djerba, Tunisia</p>
+        <li><a href="assets/images/dorr%20morker%20tunisien.jpg"><img src="assets/images/dorr%20morker%20tunisien.jpg" width="300"></a></li>
+        <p>Location: Djerba, Tunisia</p>
+
+        </section>
+
 </body>
 </html>
