--- a/black and white index.html
+++ b/black and white index.html
@@ -6,5 +6,37 @@
 </head>
 <body>
 
+<div id="content">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio/index.html">Portfolio</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <section class="first">
+<h1>Black and white</h1>
+
+
+        <img src="assets/images/mamma%20hand%20smultron.jpg">
+        <p>Model: Annika Lavén</p>
+        <img src="assets/images/halvt%20smultron%20hand.jpg">
+        <p>Model: Sandra Jarlstål</p>
+        <img src="assets/images/rebecca%20vind%20har1.jpg">
+        <p>Model: Rebecca Carlqvist</p>
+        <img src="assets/images/sandra%20omslag%20arms%20around%20me.jpg">
+        <p>Model: Sandra Jarlstål</p>
+        <img src="assets/images/anton%20centralstation.jpg">
+        <p>Model: Anton Bergh</p>
+        <img src="assets/images/anton%20ensam.jpg">
+        <p>Model: Anton Bergh</p>
+        <img src="assets/images/sandra%20mumie%20profil.jpg">
+        <p>Model: Sandra Jarlstål</p>
+        <img src="assets/images/sandra%20horlurar%20dubstep.jpg">
+        <p>Model: Sandra Jarlstål</p>
+
+
+    </section>
+        </div>
 </body>
 </html>
