--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,6 +12,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../about.html">About</a></li>
         <li><a href="../portfolio/index.html">Portfolio</a></li>
+        <li><a href="../blog.html">Blog</a></li>
         <li><a href="../contact.html">Contact</a></li>
     </ul>
 </div>
@@ -28,7 +29,7 @@
         <p>
             En text om svartvita bilder kanske? inspiration osv.
         </p>
-        <ul><li><a href="black and white.html">To black and white</a></li></ul>
+        <ul class="nav"><li><a href="../black and white index.html">To black and white</a></li></ul>
 
     </section>
 
@@ -44,7 +45,9 @@
             Text om naturbilder samt inspiration till dem.
         </p>
 
-        <ul><li><a href="Nature pictures.html">To nature</a></li></ul>
+        <ul class="nav"><li><a href="../Nature%20pictures.html">To nature</a></li></ul>
+
+
     </section>
 
     <section class="third">
@@ -58,8 +61,10 @@
             beskrivning av parafrasen och nar den fotades. (kanske inte)
         </p>
 
-        <ul><li><a href="paraphrase.html">To paraphrase</a></li></ul>
+        <ul class="nav"><li><a href="../paraphrase.html">To paraphrase</a></li></ul>
         </section>
+
+
 
     <section class="fourth">
         <h2>Portrait</h2>
@@ -72,7 +77,7 @@
             beskrivning av parafrasen och nar den fotades. (kanske inte)
         </p>
 
-        <ul><li><a href="portrait.html">To portraits</a></li></ul>
+        <ul class="nav"><li><a href="../portrait.html">To portraits</a></li></ul>
     </section>
 </body>
 </html>
