--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 
-<div id="header">
+<div id="content">
 
+    <section class="first">
+    <h1>Sandra Jarlstål</h1>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -15,6 +17,9 @@
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
+
+        <p>Lorem Ipsum</p>
 </div>
+</section>
 </body>
 </html>
