added pictures and links

--- a/paraphrase.html
+++ b/paraphrase.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-
+<link href="assets/css/style.css" rel="stylesheet" media="all"/>
 <div id="header">
 
     <ul>
