--- a/Nature pictures.html
+++ b/Nature pictures.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<link href="assets/css/style.css" rel="stylesheet" media="all"/>
 <div id="content">
     <ul>
         <li><a href="index.html">Home</a></li>
