--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
 <div id="content">
-
+<header>
+    <link href="assets/css/style.css" rel="stylesheet" media="all"/>
     <section class="first">
     <h1>Sandra Jarlstål</h1>
     <ul>
@@ -19,6 +20,7 @@
     </ul>
 
         <p>Lorem Ipsum</p>
+</header>
 </div>
 </section>
 </body>
