--- a/portrait.html
+++ b/portrait.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<link href="assets/css/style.css" rel="stylesheet" media="all"/>
+
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
